--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="right-content">
             <!-- 学生分布 -->
             <div class="echarts-region content-list" id="student-echarts">
-                <div id="echarts-sex" style="width: 300px;height: 300px;"></div>
-                <div id="echarts-area" style="width: 300px; height:300px;"></div>
+                <div id="echarts-sex"></div>
+                <div id="echarts-area"></div>
             </div>
             <!-- 学生列表页 -->
             <div class="student-list content-list" id="student-list">
@@ -38,9 +38,9 @@
                     <label for="inp"></label>
                     <input type="text" name="" id="inp" placeholder="请输入学号或姓名查询">
                     <label for="">男</label>
-                    <input type="radio" name="sex" value="1" checked>
+                    <input type="radio" name="sex" value="0" checked>
                     <label for="">女</label>
-                    <input type="radio" name="sex" value="0">
+                    <input type="radio" name="sex" value="1">
                     <button class="search-btn">查询</button>
                 </div>
                 <table>
